# Rinse-Programming-Language

./: .gitignore  MANIFEST.in  PUBLISHING.md  README.md  RinseToolchainRepoLayout.css  pyproject.toml  requirements.txt  rinsec_standalone.py  setup.py
Examples/: program.rn
rinse/: __init__.py  ast_dgm.py  ir_gen.py  lexer.py  nasm_gen.py  parser.py  rinsec.py  vese.py
rinsec/: ast.py  lexer.py  main.py  vese_runtime.py
src/: ast_dgm.py  ir_gen.py  lexer.py  nasm_gen.py  parser.py  rinsec.py  vese.py
tests/: algebraic_effects.rn  arith.rn  arrays_lists.rn  async_effects.rn  control_structs.rn  data_logic.rn  destruct_traits.rn  effects.rn  effects_syntax.rn  expr_assign.rn  factorial.rn  functions_structs.rn  hello.rn  hello.rns  hkg_enum.rn  list_monad.rn  loops_nests.rn  match_methods.rn  monad_blocks.rn  monads.rn  nested_loops_arrays.rn  nested_returns_loops.rn  pattern_generics.rn  pattern_traits.rn  recursive_adts.rn  switch_structs.rn  transformers.rn  tree_monad.rn
